project/log/20250520_101221.log
Hello DirectX!

clientSize:1280,720

Use Adapater: NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel: 12.2 

Complete create D3D12Device!!!!

Begin CompileShader, path:object3D.VS.hlsl, profile:vs_6_0

Compile Succeded, path:object3D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:object3D.PS.hlsl, profile:ps_6_0

object3D.PS.hlsl:6:1: error: no template named 'constantBuffer'; did you mean 'ConstantBuffer'?
constantBuffer<Material> gMaterial : register(b0);
^~~~~~~~~~~~~~
ConstantBuffer
note: 'ConstantBuffer' declared here
object3D.PS.hlsl:4:2: error: expected ';' after struct
}
 ^

